--- a/src/org/sil/syllableparser/view/fxml/SHSonorityHierarchy.fxml
+++ b/src/org/sil/syllableparser/view/fxml/SHSonorityHierarchy.fxml
@@ -24,7 +24,7 @@
 <!--                         </graphic> -->
 <!--                       </TableColumn>  -->
                       <TableColumn fx:id="nameColumn" prefWidth="63.0" text="%label.name" />
-                      <TableColumn fx:id="naturalClassColumn" prefWidth="119.0" text="%label.naturalclasses" />
+                      <TableColumn fx:id="naturalClassColumn" prefWidth="119.0" text="%label.segments" />
                         <TableColumn fx:id="descriptionColumn" prefWidth="-1.0" text="%label.description" />
                     </columns>
                      <columnResizePolicy>
@@ -56,7 +56,7 @@
                      <children>
                         <Label text="%label.name" />
                         <Label text="%label.description" GridPane.rowIndex="1" />
-                        <Label text="%label.naturalclasses" GridPane.rowIndex="2" />
+                        <Label text="%label.segments" GridPane.rowIndex="2" />
                         <Label text="%label.active" GridPane.rowIndex="3" />
                         <TextField fx:id="nameField" GridPane.columnIndex="1" onMouseReleased="#toolBarMouseReleased" onKeyReleased="#keyboardReleased" />
                         <TextField fx:id="descriptionField" GridPane.columnIndex="1" GridPane.rowIndex="1" onMouseReleased="#toolBarMouseReleased" onKeyReleased="#keyboardReleased" />
