--- a/src/org/sil/syllableparser/view/fxml/CVNaturalClasses.fxml
+++ b/src/org/sil/syllableparser/view/fxml/CVNaturalClasses.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Copyright (c) 2016-2017 SIL International
+<!-- Copyright (c) 2016-2020 SIL International
     This software is licensed under the LGPL, version 2.1 or later
     (http://www.gnu.org/licenses/lgpl-2.1.html) -->
 
@@ -62,8 +62,8 @@
                         <Label text="%label.description" GridPane.rowIndex="1" />
                         <Label text="%label.segmentornaturalclass" GridPane.rowIndex="2" />
                         <Label text="%label.active" GridPane.rowIndex="3" />
-                        <TextField fx:id="nameField" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.columnIndex="1" />
-                        <TextField fx:id="descriptionField" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.columnIndex="1" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="1" GridPane.vgrow="SOMETIMES" />
+                        <TextField fx:id="nameField" GridPane.columnIndex="1" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" />
+                        <TextField fx:id="descriptionField" GridPane.columnIndex="1" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="1" GridPane.vgrow="SOMETIMES" />
 <!--                         <TextField fx:id="segmentOrNaturalClassField" GridPane.columnIndex="1" GridPane.rowIndex="2" /> -->
                         <FlowPane hgap="4.0" prefWidth="200.0" vgap="8.0" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
                            <children>
