--- a/src/org/sil/syllableparser/view/fxml/SHSonorityHierarchy.fxml
+++ b/src/org/sil/syllableparser/view/fxml/SHSonorityHierarchy.fxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright (c) 2016 SIL International 
+<!-- Copyright (c) 2016-2020 SIL International
     This software is licensed under the LGPL, version 2.1 or later 
     (http://www.gnu.org/licenses/lgpl-2.1.html) -->
     
@@ -49,28 +49,29 @@
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label text="%label.name" />
+                        <Label text="%label.name" GridPane.hgrow="SOMETIMES" />
                         <Label text="%label.description" GridPane.rowIndex="1" />
                         <Label text="%label.segments" GridPane.rowIndex="2" />
                         <Label text="%label.active" GridPane.rowIndex="3" />
-                        <TextField fx:id="nameField" GridPane.columnIndex="1" onMouseReleased="#toolBarMouseReleased" onKeyReleased="#keyboardReleased" />
-                        <TextField fx:id="descriptionField" GridPane.columnIndex="1" GridPane.rowIndex="1" onMouseReleased="#toolBarMouseReleased" onKeyReleased="#keyboardReleased" />
+                        <TextField fx:id="nameField" GridPane.columnIndex="1" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" />
+                        <TextField fx:id="descriptionField" GridPane.columnIndex="1" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="1" GridPane.vgrow="SOMETIMES" />
 <!--                         <TextField fx:id="segmentOrNaturalClassField" GridPane.columnIndex="1" GridPane.rowIndex="2" /> -->
-                        <FlowPane hgap="4.0" prefHeight="200.0" prefWidth="200.0" vgap="8.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                        <FlowPane hgap="4.0" prefWidth="200.0" vgap="8.0" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
                            <children>
-                              <TextFlow fx:id="ncsTextFlow" prefHeight="22.0" prefWidth="234.0">
+                              <TextFlow fx:id="ncsTextFlow" prefWidth="234.0">
                                  <padding>
                                     <Insets top="7.5" />
                                  </padding></TextFlow>
                               <Button fx:id="ncsButton" mnemonicParsing="false" onAction="#handleLaunchSegmentChooser" text="...">
                                  <FlowPane.margin>
                                     <Insets left="3.0" />
-                                 </FlowPane.margin></Button>
+                                 </FlowPane.margin>
+                              </Button>
                            </children>
                          </FlowPane>
                          <CheckBox fx:id="activeCheckBox" mnemonicParsing="false" text="" GridPane.columnIndex="1" GridPane.rowIndex="3" />
