--- a/src/org/sil/syllableparser/view/fxml/SHSonorityHierarchy.fxml
+++ b/src/org/sil/syllableparser/view/fxml/SHSonorityHierarchy.fxml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <!-- Copyright (c) 2016-2020 SIL International
     This software is licensed under the LGPL, version 2.1 or later 
     (http://www.gnu.org/licenses/lgpl-2.1.html) -->
-    
-<?import javafx.geometry.*?>
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.layout.AnchorPane?>
 
-<StackPane prefHeight="397.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sil.syllableparser.view.SHSonorityHierarchyController">
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.TextFlow?>
+
+<StackPane prefHeight="397.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sil.syllableparser.view.SHSonorityHierarchyController">
    <children>
       <SplitPane fx:id="splitPane" dividerPositions="0.4373040752351097, 0.5" prefHeight="160.0" prefWidth="200.0">
         <items>
@@ -58,8 +69,8 @@
                         <Label text="%label.description" GridPane.rowIndex="1" />
                         <Label text="%label.segments" GridPane.rowIndex="2" />
                         <Label text="%label.active" GridPane.rowIndex="3" />
-                        <TextField fx:id="nameField" GridPane.columnIndex="1" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" />
-                        <TextField fx:id="descriptionField" GridPane.columnIndex="1" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="1" GridPane.vgrow="SOMETIMES" />
+                        <TextField fx:id="nameField" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.columnIndex="1" />
+                        <TextField fx:id="descriptionField" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.columnIndex="1" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="1" GridPane.vgrow="SOMETIMES" />
 <!--                         <TextField fx:id="segmentOrNaturalClassField" GridPane.columnIndex="1" GridPane.rowIndex="2" /> -->
                         <FlowPane hgap="4.0" prefWidth="200.0" vgap="8.0" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
                            <children>
@@ -77,6 +88,7 @@
                          <CheckBox fx:id="activeCheckBox" mnemonicParsing="false" text="" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                      </children>
                   </GridPane>
+                  <TextArea fx:id="errorTextArea" layoutX="52.0" layoutY="174.0" prefHeight="200.0" prefWidth="-1.0" />
                </children>
             </AnchorPane>
         </items>
