--- a/src/org/sil/syllableparser/view/fxml/SyllabificationComparison.fxml
+++ b/src/org/sil/syllableparser/view/fxml/SyllabificationComparison.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Copyright (c) 2019 SIL International 
+<!-- Copyright (c) 2019-2021 SIL International 
     This software is licensed under the LGPL, version 2.1 or later 
     (http://www.gnu.org/licenses/lgpl-2.1.html) -->
 
@@ -18,12 +18,12 @@
             <CheckBox fx:id="useCVApproach" layoutX="37.0" layoutY="13.0" mnemonicParsing="false" text="%label.usecvapproach" />
             <CheckBox fx:id="useSHApproach" layoutX="37.0" layoutY="42.0" mnemonicParsing="false" text="%label.useshapproach" />
             <CheckBox fx:id="useONCApproach" layoutX="37.0" layoutY="72.0" mnemonicParsing="false" text="%label.useoncapproach" />
-            <CheckBox fx:id="useMoraicApproach" disable="true" layoutX="332.0" layoutY="13.0" mnemonicParsing="false" text="%label.usemoraicapproach" />
+            <CheckBox fx:id="useMoraicApproach" layoutX="332.0" layoutY="13.0" mnemonicParsing="false" text="%label.usemoraicapproach" />
             <CheckBox fx:id="useNuclearProjectionApproach" disable="true" layoutX="332.0" layoutY="42.0" mnemonicParsing="false" text="%label.usenpapproach" />
             <CheckBox fx:id="useOTApproach" disable="true" layoutX="332.0" layoutY="72.0" mnemonicParsing="false" text="%label.useotapproach" />
          </children>
       </Pane>
-		<WebView fx:id="browser" layoutX="1.0" layoutY="120.0" prefHeight="435.0" prefWidth="637.0" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+		<WebView fx:id="browser" layoutX="1.0" layoutY="120.0" prefHeight="435.0" prefWidth="637.0" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="110.0"/>
 		<ButtonBar layoutX="352.0" layoutY="488.0" prefHeight="40.0" prefWidth="272.0" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="13.0">
 			<buttons>
 				<Button fx:id="compareButton" defaultButton="true" mnemonicParsing="false" onAction="#handleCompare" text="%label.compare" />
